chore: JEP-451 config example with mockito and JDK 21
https://openjdk.org/jeps/451
https://mail.openjdk.org/pipermail/serviceability-dev/2023-May/048857.html
https://github.com/openjdk/jdk/pull/13899