@@ -16,6 +16,8 @@ javaConvention {
 }
 
 dependencies {
+    testImplementation(libs.bundles.junit.jupiter)
+    testImplementation(libs.bundles.mockito)
 }
 
 // Due to https://github.com/gradle/gradle/issues/18426, tasks are not declared in the TaskContainerScope
@@ -27,5 +29,16 @@ tasks.withType<JavaExec>().configureEach {
         // "JAVA_LIBRARY_PATH" to ".:/usr/local/lib",
         "FINNHUB_TOKEN" to System.getenv("FINNHUB_TOKEN"),
         "HTTP_CLIENT_CARRIER_THREADS" to System.getenv("HTTP_CLIENT_CARRIER_THREADS"),
+    )
+}
+
+tasks.test {
+    jvmArgs(
+        // Prevents the following warning:
+        // WARNING: A Java agent has been loaded dynamically (/Users/brice.dutheil/.gradle/caches/modules-2/files-2.1/net.bytebuddy/byte-buddy-agent/1.14.4/3bf5ac1104554908cc623e40e58a00be37c35f36/byte-buddy-agent-1.14.4.jar)
+        // WARNING: If a serviceability tool is in use, please run with -XX:+EnableDynamicAgentLoading to hide this warning
+        // WARNING: If a serviceability tool is not in use, please run with -Djdk.instrument.traceUsage for more information
+        // WARNING: Dynamic loading of agents will be disallowed by default in a future release
+        "-XX:+EnableDynamicAgentLoading",
     )
 }
